# asm-ray-tracer

./: .clang-format  .gitignore  CMakeLists.txt  Hittable.h  Makefile  Material.c  Material.h  README.md  README.norg  Scene.c  Scene.h  array.c  array.h  asm_core.s  c_core.c  camera.c  camera.h  core.h  gen_ninja.py  main.c  perf.c  ray.c  ray.h  scene.c  scene.h  util.c  util.h  vec3.c  vec3.h
data/: exp3-asm-box-measurements.txt  exp3-asm-sphere-measurements.txt  exp3-asm-tetra-measurements.txt  exp3-c-box-measurements.txt  exp3-c-sphere-measurements.txt  exp3-c-tetra-measurements.txt
hittable/: Box.c  Box.h  KDTree.c  KDTree.h  List.c  List.h  Plane.c  Plane.h  Record.h  Sphere.c  Sphere.h  Triangle.c  Triangle.h  TriangleMesh.c  TriangleMesh.h
informe/: .gitignore  0_main.tex  1_caratula.tex  2_introduccion.tex  3_diferencias.tex  4_ray_tracing.tex  5_experimentacion.tex  6_conclusion.tex  Makefile  abstract.tex  caratula.tex  conclusion.tex  desarrollo.tex  diferencias.tex  experimentacion.ipynb  experimentacion.tex  introduccion.tex  main.tex  optimizacion.tex  ray_tracing.tex  recursos.bib
scenes/: box_in_plane  dark_room  obj_mesh_in_plane  scene1.txt  simple.txt  sphere_in_plane  three_spheres_in_plane  triangle_in_plane  two_spheres_in_plane
scenes/exp1_impl_diff/: asm-sphere  cpp-sphere  mongi-sphere
scenes/exp2_res_diff/: 01_32x32  02_64x64  03_100x100  04_200x200  05_300x300  06_350x350  07_400x400  08_450x450  09_500x500  10_600x600
scenes/exp3_obj_types/: box_01x01  box_02x02  box_03x03  box_04x04  box_05x05  box_06x06  box_07x07  box_08x08  box_09x09  box_10x10  sphere_01x01  sphere_02x02  sphere_03x03  sphere_04x04  sphere_05x05  sphere_06x06  sphere_07x07  sphere_08x08  sphere_09x09  sphere_10x10  tetra_01x01  tetra_02x02  tetra_03x03  tetra_04x04  tetra_05x05  tetra_06x06  tetra_07x07  tetra_08x08  tetra_09x09  tetra_10x10
scripts/: exp3-generate-scenes.sh  generate_featured_scene.py  generate_ninja.py  generate_scenes.py  render-scenes.sh  time_measure.sh
scripts/lib/: config.py  generation.py  ray_tracer.py
src/: Material.h  Scene.c  Scene.h  array.c  array.h  asm_core.nasm  c_core.c  c_core.c.bak  config.c  config.h  core.h  main.c  materials.h  perf.c  surfaces.c  surfaces.h  tracer.h  util.c  util.h  vec3.c  vec3.h
src/asm/: constants.nasm  macros.nasm  mt.nasm  offsets.nasm  tracer.nasm
src/c/: intersection.c  intersection.h  shading.c  shading.h  tracer.c  vec3.c
src/hittable/: Box.h  KDTree.c  KDTree.c.bak  KDTree.h  List.c  List.c.bak  List.h  Plane.h  Sphere.c.bak  Sphere.h  Triangle.h
src/scene/: Camera.c  Camera.h  Scene.c  Scene.h
src/structures/: array.h  shpt.h
